# ta9sim-

./: README.md  app.json  package-lock.json  package.json
app/: _layout.tsx
app/(auth)/: login.tsx  register.tsx
app/(tabs)/: _layout.tsx  analytics.tsx  calendar.tsx  documents.tsx  index.tsx  insights.tsx  profile.tsx  settings.tsx  tasks.tsx
components/: AIAgent.tsx  AIInsightModal.tsx  AIRecommendationCard.tsx  DocumentProcessingModal.tsx  EditTaskModal.tsx  NewTaskModal.tsx  PDFUploader.tsx  PlanningOverview.tsx  PriorityIndicator.tsx
components/ui/: Badge.tsx  Button.tsx  Card.tsx
config/: api-spec.ts  api.ts
constants/: Colors.ts  theme.ts
contexts/: AIContext.tsx  AppContext.tsx  AuthContext.tsx
crewai_project/: .env.example  README.md  __init__.py  demo_crew.py  main.py  mock_server.py  pyproject.toml  requirements.txt  server.py
crewai_project/daily_student_priority_advisor/: __init__.py  crew.py  simple_crew.py
crewai_project/daily_student_priority_advisor/config/: agents.yaml  tasks.yaml
hooks/: index.ts  useApi.ts
lib/: supabase.ts
services/: aiService.ts  api.ts  authService.ts  documentService.ts  index.ts  recommendationService.ts  scheduleService.ts  taskService.ts
supabase/: schema.sql
